# friendly_pipes

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
examples/: demo.rs
src/: async_server.rs  consumer.rs  lib.rs  producer.rs  producer_json.rs
