[package]
name = "friendly_pipes"
version = "0.1.0"
edition = "2024"

[features]
default = ["producer", "consumer"]
producer = []
consumer = []
async_server = ["consumer", "dep:tokio"]


[dependencies]
tokio = {version = "1.46", optional = true}

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_IO", "Win32_System_Pipes"] }
windows-core = "0.60"

[dev-dependencies]
friendly_pipes = { path = ".", features = ["producer", "async_server"]}
