[package]
name = "friendly_pipes"
version = "0.1.0"
edition = "2024"

[features]
default = ["producer", "consumer"]
producer = []
consumer = ["dep:futures-core", "dep:tokio", "dep:futures-util"]
async_server = ["consumer", "dep:tokio-util"]


[dependencies]
tokio = {version = "1.46", optional = true, features = ["net"]}
tokio-util = { version = "0.7", optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_IO", "Win32_System_Pipes"] }
windows-core = "0.60"

[dev-dependencies]
friendly_pipes = { path = ".", features = ["producer", "async_server"]}
tokio = { version = "1.46", features = ["full"] }